fix resonsive layout article text flowing over div on smallest view, actually removing min-width on image

--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -272,8 +272,7 @@ a.active {
     box-shadow: 2px 2px 1px grey;
 }
 
-.article img{
-    min-width: 300px;
+.article img{    
     box-shadow: 2px 2px 1px black;
 }
 
